src/dog/DogEditorUI.module.css
.root {
	display: flex;
	flex-direction: column;
}

.main {
	display: flex;
	flex-direction: column;
	border-top: 1px solid var(--editor-border-color);
	flex: 1;
}

@media (min-width: 801px) {
	.root {
		height: 100%;
	}

	.main {
		flex-direction: row;
		overflow: hidden;
	}
}

.dogPreviewWithSpeech,
.dog {
	background: #fff;
}

@media (prefers-color-scheme: dark) {
	.dogPreviewWithSpeech,
	.dog {
		background: #777;
	}

	.invertColors .dog {
		background: transparent;
	}
}

.invertColors {
	filter: invert(100%);
}

.invertColors,
.invertColors .dog {
	background: #fff;
}

.dog {
	margin-bottom: 10px;
}

.dogPreviewCanvas {
	width: 100%;
}

@media (min-width: 801px) {
	.dogPreviewCanvas {
		width: 375px;
	}
}

@media (min-width: 1441px) {
	.dogPreviewCanvas {
		width: 750px;
	}
}

.editorControls {
	display: flex;
	flex-direction: column;
	overflow: scroll;
	padding: 0 10px 10px;
	width: 100%;
}

/* Different grid on small/large screens */
.grid {
	display: grid;
	grid-template-columns: auto auto 1fr auto;
	margin-top: 10px;
}

.label {
	display: flex;
	align-items: center;
	margin: 0 8px 8px 0;
	grid-column: 1 / 3;
}

.selectMenu {
	margin: 0 0 8px 0;
	grid-column: 3 / 4;
}

.selectModalLauncher {
	margin: 0 0 8px 8px;
}

.clothesControls {
	display: flex;
	align-items: center;
	margin: 0 0 8px 0;
	grid-column: 1 / 4;
}

.controlLabel {
	margin-right: 8px;
}

.color {
	margin-right: 16px;
}

.dimensions {
	margin-left: 8px;
}

.colorControl {
	display: flex;
	align-items: center;
	margin: 0 0 8px 0;
	grid-column: 3 / 4;
}

.fullWidthControl {
	margin-bottom: 8px;
	grid-column: 1 / 4;
}

@media (min-width: 801px) {
	.grid {
		display: inline-grid;
		grid-template-columns: auto auto 266px 1fr;
	}

	.selectMenu {
		margin-right: 16px;
	}

	.selectModalLauncher {
		margin-left: 0;
	}

	.clothesControls {
		grid-column: auto;
	}

	.colorControl {
		grid-column: 3 / 5;
	}

	.fullWidthControl {
		grid-column: 1 / 5;
	}
}

.detailsGroup {
	margin-top: 10px;
}

.checkbox {
	margin-top: 10px;
}

